--- a/Clase 3/tareaU3/cvficticio.html
+++ b/Clase 3/tareaU3/cvficticio.html
@@ -31,6 +31,6 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ipsa inventore provident perspiciatis exercitationem ex aperiam<br/> totam labore iusto, autem, molestias, aliquam numquam voluptatum beatae explicabo rerum asperiores! Distinctio, iusto.</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus quod repellendus alias soluta ab ipsam officia dolorum!<br/> At corrupti numquam, cumque odit asperiores aperiam, placeat natus, sint ratione voluptate incidunt!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum laborum esse voluptas consequuntur enim repellat consectetur<br/> corporis molestiae, tempore rem recusandae doloremque rerum repellendus perspiciatis optio sed inventore dicta! Maiores.</p>
-    <h4>Si querés contactarme podes completar el siguiente <a href="http://localhost:52330/Clase%203/tareaU3/contacto.html" target="_blank">formulario</a></h4>
+    <h4>Si querés contactarme podes completar el siguiente <a href="contacto.html" target="_blank">formulario</a></h4>
 </body>
 </html>
