--- a/Clase 4/tareaU4/contacto.html
+++ b/Clase 4/tareaU4/contacto.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Formulario de contacto</title>
+    <link rel="stylesheet" href="estilos.css">
+</head>
+<body>
 <form action="" method="">
     <p>
         <label for="nom">Nombre</label>
@@ -58,3 +68,5 @@
         <input type="reset" value="Borrar" />
     </p>
 </form>
+</body>
+</html>
